# lossy-autoencoder

./: .gitignore  README.md  pyproject.toml
notebook/: model.ipynb
notebook/.ipynb_checkpoints/: model-checkpoint.ipynb
